# typed-envs

./: .buildinfo  .gitignore  AGENTS.md  Makefile  README.md  genindex.html  index.html  objects.inv  plugin.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_factory.py  test_typed_envs.py
.github/workflows/: black.yaml  compile.yaml  deploy-docs.yaml  lint.yaml  mypy.yaml  pytest.yaml  pyupgrade.yaml  release.yaml
_modules/: index.html  typed_envs.html  types.html
_modules/typed_envs/: _env_var.html  factory.html
_sources/: index.rst.txt  plugin.rst.txt
_sources/source/: modules.rst.txt  typed_envs.rst.txt
docs/: conf.py
source/: modules.html  typed_envs.html
tests/: test_mypy_plugin.py
typed_envs/: ENVIRONMENT_VARIABLES.py  __init__.py  _env_var.py  _typed.py  env_var.py  factory.py  mypy_plugin.py  registry.py  typing.py
