[build-system]
requires = [
  "setuptools",
  "wheel",
  "mypy[mypyc]==1.19.1",
]

[tool.mypy]
strict = true
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
  "unused-awaitable",
  "unused-ignore",
]
