[build-system]
requires = ["setuptools", "wheel", "mypy[mypyc]==1.19.1"]

[tool.mypy]
files = ["."]
strict = true
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-expr",
  "redundant-self",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
  "unused-awaitable",
  "unused-ignore",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_missing_imports = true
disallow_untyped_decorators = false
